--- a/catalog.html
+++ b/catalog.html
@@ -9,96 +9,103 @@
 
   <body>
     <div class="container">
-    <header class="page_header" data-test="header">
-      <a class="navigation_logo" href="index.html"> <img class="logo" src="Images/Header/logo.svg" width="140"
-          height="70" alt="Уютный городок Седона"> </a>
-      <nav class="navigation">
-        <ul class="navigation_list">
-          <li class="navigation_item"> <a class="navigation_link" href="index.html">Главная</a> </li>
-          <li class="navigation_item"> <a class="navigation_link" href="about.htmn">О Седоне</a> </li>
-          <li class="navigation_item"> <a class="navigation_link" href="#">Гостиницы</a> </li>
-        </ul>
-        <div class="navigation_right">
-          <div class="navigation_icons">
-            <a class="navigation_link" href="#"> <span class="visually_hidden">
-                Поиск
-              </span> <img class="header_logo" src="Images/Header/search.svg" width="44" height="64" alt="Поиск"> </a>
-            <a class="navigation_link" href="#"> <span class="visually_hidden">
-                Избранное
-              </span> <img class="header_logo" src="Images/Header/likes_green.svg" width="44" height="64"
-                alt="Избранное"> </a>
+      <header class="page_header" data-test="header">
+        <a class="navigation_logo" href="index.html"> <img class="logo" src="Images/Header/logo.svg" width="140"
+            height="70" alt="Уютный городок Седона"> </a>
+        <nav class="navigation">
+          <ul class="navigation_list">
+            <li class="navigation_item"> <a class="navigation_link" href="index.html">Главная</a> </li>
+            <li class="navigation_item"> <a class="navigation_link" href="about.htmn">О Седоне</a> </li>
+            <li class="navigation_item"> <a class="navigation_link active" href="#">Гостиницы</a> </li>
+          </ul>
+          <div class="navigation_right">
+            <div class="navigation_icons">
+              <a class="navigation_link" href="#"> <span class="visually_hidden">
+                  Поиск
+                </span> <img class="header_logo" src="Images/Header/search.svg" width="44" height="64" alt="Поиск"> </a>
+              <a class="navigation_link" href="#"> <span class="visually_hidden">
+                  Избранное
+                </span> <img class="header_logo" src="Images/Header/like_green.svg" width="44" height="64"
+                  alt="Избранное"> </a>
+            </div>
+            <a class="navigation_link_button" href="#">Хочу сюда!</a>
           </div>
-          <a class="navigation_link_button" href="#">Хочу сюда!</a>
+        </nav>
+      </header>
+
+      <main class="page_main">
+        <div class="page_inner">
+          <h1 class="page_inner_title">Гостиницы Седоны</h1>
+          <ul class="breadcrumbs">
+            <li class="breadcrumbs_item"> <a class="breadcrumbs-link visually_hidden" href="index.html">Главная</a> <img
+                class="breadcrumbs_home_logo" src="Images/Catalog/home.svg" alt="На главную"> </li>
+            <li><a class="breadcrumbs-link visually_hidden" href="#">Назад</a> <img class="breadcrumbs_back_logo"
+                src="Images/Catalog/Vector.svg" alt="Назад"> </li>
+            <li class="breadcrumbs_item"> <a class="breadcrumbs-link ">Гостиницы</a> </li>
+          </ul>
+          <section class="catalog_products">
+            <h2 class="visually_hidden">Выбор гостиниц по фильтрам</h2>
+            <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="post"></form>
+            <div class="left_menu">
+              <div class="catalog_filter_group">
+                <p class="catalog_filter_title">Инфраструктура:</p>
+                <ul class="catalog_filter_list">
+                  <li class="catalog_filter_item">
+                    <input class="control_input" type="checkbox" name="swimingpool" checked>
+                 <label class="control">Бассейн</label>
+                  </li>
+                  <li class="catalog_filter_item">
+                    <label class="control">
+                      <input class="control_input" type="checkbox" name="parking" checked> Парковка </label>
+                  </li>
+                  <li class="catalog_filter_item">
+                    <label class="control">
+                      <input class="control_input" type="checkbox" name="wifi"> Wi-fi </label>
+                  </li>
+                </ul>
+              </div>
+              <div class="catalog_filter_group">
+                <p class="catalog_filter_title">Тип жилья:</p>
+                <ul class="catalog_filter_list">
+                  <li class="catalog_filter_item">
+                    <label class="control">
+                      <input class="control_input" type="radio" name="catalog_type" checked> Гостиница </label>
+                  </li>
+                  <li class="catalog_filter_item">
+                    <label class="control">
+                      <input class="control_input" type="radio" name="catalog_type"> Мотель </label>
+                  </li>
+                  <li class="catalog_filter_item">
+                    <label class="control">
+                      <input class="control_input" type="radio" name="catalog_type"> Апартаменты </label>
+                  </li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="right_menu">
+              <div class="price">
+                <h3 class="price_title">Стоимость, ₽:</h3>
+                <div class="output_price">
+                  <input class="price_output_style_start" type="text" placeholder="от">
+                  <input class="price_output_style_end" type="text" placeholder="до">
+                </div>
+                <p class="price_start_output">0</p>
+                <p class="price_end_output">9000</p>
+              </div>
+
+              <div class="price_button">
+                <button class="button_apply">Применить</button>
+                <button class="button_reset">Сбросить</button>
+              </div>
+            </div>
+          </section>
         </div>
-      </nav>
-    </header>
-
-    <main class="page_main">
-      <div class="page_inner">
-        <h1 class="page_inner_title">Гостиницы Седоны</h1>
-        <ul class="breadcrumbs">
-          <li class="breadcrumbs_item"> <a class="breadcrumbs-link visually_hidden" href="index.html">Главная</a> <img
-              class="breadcrumbs_home_logo" src="Images/Catalog/home.svg" alt="На главную"> </li>
-          <li><a class="breadcrumbs-link visually_hidden" href="#">Назад</a> <img class="breadcrumbs_back_logo"
-              src="Images/Catalog/Vector.svg" alt="Назад"> </li>
-          <li class="breadcrumbs_item"> <a class="breadcrumbs-link ">Гостиницы</a> </li>
-        </ul>
-        <section class="catalog_products">
-          <h2 class="visually_hidden">Выбор гостиниц по фильтрам</h2>
-          <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="post"></form>
-          <div class="left_menu">
-            <div class="catalog_filter_group">
-              <p class="catalog_filter_title">Инфраструктура:</p>
-              <ul class="catalog_filter_list">
-                <li class="catalog_filter_item">
-                  <label class="control">
-                    <input class="control_input" type="checkbox" name="swimingpool" checked> Бассейн </label>
-                </li>
-                <li class="catalog_filter_item">
-                  <label class="control">
-                    <input class="control_input" type="checkbox" name="parking" checked> Парковка </label>
-                </li>
-                <li class="catalog_filter_item">
-                  <label class="control">
-                    <input class="control_input" type="checkbox" name="wifi"> Wi-fi </label>
-                </li>
-              </ul>
-            </div>
-            <div class="catalog_filter_group">
-              <p class="catalog_filter_title">Тип жилья:</p>
-              <ul class="catalog_filter_list">
-                <li class="catalog_filter_item">
-                  <label class="control">
-                    <input class="control_input" type="radio" name="catalog_type" checked> Гостиница </label>
-                </li>
-                <li class="catalog_filter_item">
-                  <label class="control">
-                    <input class="control_input" type="radio" name="catalog_type"> Мотель </label>
-                </li>
-                <li class="catalog_filter_item">
-                  <label class="control">
-                    <input class="control_input" type="radio" name="catalog_type"> Апартаменты </label>
-                </li>
-              </ul>
-            </div>
-          </div>
-
-          <!-- Здесь будет ползунок
-
-          <div class="price_button">
-            <button class="button_apply">Применить</button>
-            <button class="button_reset">Сбросить</button>
-          </div>
-        -->
-        </section>
-      </div>
 
 
-
-      <section class="cards_all">
-        <div class="head_sorting">
+        <section class="cards_all">
           <h2 class="cards_all_title">
-            Найдено гостиниц:38
+            Найдено гостиниц: 38
           </h2>
 
           <select class="select_control" aria-label="Сортировка">
@@ -106,17 +113,19 @@
             <option value="expensive">Сначала дорогие</option>
             <option value="popular">Сначала популярные</option>
           </select>
-          <a href="#" class="button"> <span class="visually_hidden">
+          <a href="#" class="button_activ"> <span class="visually_hidden">
               Показать карточки
-            </span> <img class="filter_card" src="Images/Catalog/filter_cards.svg" alt="Показать карточки"> </a>
+            </span> <img class="filter_card" src="Images/Catalog/filter_cards.svg" width="16" height="14"
+              alt="Показать карточки"> </a>
           <a href="#" class="button"> <span class="visually_hidden">
               Показать карточки и описание
-            </span> <img class="filter_card_text" src="Images/Catalog/filter_cards_text.svg"
+            </span> <img class="filter_card_text" src="Images/Catalog/filter_cards_text.svg" width="16" height="14"
               alt="Показать карточки и описание"> </a>
           <a href="#" class="button"> <span class="visually_hidden">
               Показать список
-            </span> <img class="filter_text" src="Images/Catalog/filter_text.svg" alt="Показать список"> </a>
-        </div>
+            </span> <img class="filter_text" src="Images/Catalog/filter_text.svg" width="16" height="14"
+              alt="Показать список"> </a>
+        </section>
 
         <section class="product_list">
           <section class="product_card"> <img class="product_card_image" src="Images/Hotel/hotel_1.jpg" alt="Amara">
@@ -173,7 +182,7 @@
             </a>
             <div class="type_and_price">
               <b class="product_card_type">Гостиница</b>
-              <b class="product_card_price">От 1500 &#8381;</b>
+              <b class="product_card_type">От 1500 &#8381;</b>
             </div>
             <div class="card_button">
               <a class="card_link_button" href="card.html">Подробнее</a>
@@ -190,39 +199,39 @@
           <a class="pagination_blu">3</a>
           <a class="pagination_blu">4</a>
           <a class="pagination_white">...</a>
-          <a class="pagination_blu">10</a>
+          <a class="pagination_blu_double_number">10</a>
         </div>
-      </section>
 
-      <form class="subscribe_form_catalog" action="https://echo.htmlacademy.ru/" method="post">
-        <div class="subscribe">
-          <h3 class="subscribe_title_catalog">Подпишитесь на рассылку</h3>
-          <p class="subscribe_description_catalog">Только полезная информация и никакого спама, честное бойскаутское!
-          </p>
-          <div class="input_button_catalog">
-            <input class="input_style" type="text" placeholder="Ваш e-mail">
-            <button class="subscribe_button">Подписаться</button>
+
+        <form class="subscribe_form_catalog" action="https://echo.htmlacademy.ru/" method="post">
+          <div class="subscribe">
+            <h3 class="subscribe_title_catalog">Подпишитесь на рассылку</h3>
+            <p class="subscribe_description_catalog">Только полезная информация и никакого спама, честное бойскаутское!
+            </p>
+            <div class="input_button_catalog">
+              <input class="input_style" type="text" placeholder="Ваш e-mail">
+              <button class="subscribe_button">Подписаться</button>
+            </div>
           </div>
-        </div>
-      </form>
-    </main>
+        </form>
+      </main>
 
-    <footer class="page_footer">
-      <div class="footer_container">
-        <div class="footer_social">
-          <a class="footer_link" href="https://vc.com/htmlacademy"><img class="social_logo"
-              src="Images/Footer/vkontakte.svg" width="24" height="14" alt="Вконтакте"> </a>
-          <a class="footer_link" href="https://t.me/htmlacademy"><img class="social_logo"
-              src="Images/Footer/telegram.svg" width="18" height="15" alt="Телеграм"> </a>
-          <a class="footer_link" href="https://www.youtoobe.com/user/htmlacademy"><img class="social_logo"
-              src="Images/Footer/youtube.svg" width="22" height="16" alt="Ютуб"> </a>
+      <footer class="page_footer">
+        <div class="footer_container">
+          <div class="footer_social">
+            <a class="footer_link" href="https://vc.com/htmlacademy"><img class="social_logo"
+                src="Images/Footer/vkontakte.svg" width="24" height="14" alt="Вконтакте"> </a>
+            <a class="footer_link" href="https://t.me/htmlacademy"><img class="social_logo"
+                src="Images/Footer/telegram.svg" width="18" height="15" alt="Телеграм"> </a>
+            <a class="footer_link" href="https://www.youtoobe.com/user/htmlacademy"><img class="social_logo"
+                src="Images/Footer/youtube.svg" width="22" height="16" alt="Ютуб"> </a>
+          </div>
+          <a class="contacts_tel" href="tel:78128121212">+7(812)812-12-12</a>
+          <a class="footer_navigation_link" href="https://htmlacademy.ru/"><img class="logo_html"
+              src="Images/Footer/html_academy.svg" width="115" height="33" alt="Логотип компании htmlacademy"></a>
         </div>
-        <a class="contacts_tel" href="tel:78128121212">+7(812)812-12-12</a>
-        <a class="footer_navigation_link" href="https://htmlacademy.ru/"><img class="logo_html" src="Images/Footer/html_academy.svg" width="115" height="33"
-          alt="Логотип компании htmlacademy"></a>
-      </div>
-    </footer>
-  </div>
+      </footer>
+    </div>
   </body>
 
 </html>
