--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             alt="Уютный городок Седона"> </a>
         <nav class="navigation">
           <ul class="navigation_list">
-            <li class="navigation_item"> <a class="navigation_link" href="#">Главная</a> </li>
+            <li class="navigation_item"> <a class="navigation_link active" href="#">Главная</a> </li>
             <li class="navigation_item"> <a class="navigation_link" href="about.htmn">О Седоне</a> </li>
             <li class="navigation_item"> <a class="navigation_link" href="catalog.html">Гостиницы</a> </li>
           </ul>
@@ -118,7 +118,7 @@
             <a class="footer_link" href="https://www.youtoobe.com/user/htmlacademy"><img class="social_logo"
                 src="Images/Footer/youtube.svg" width="22" height="16" alt="Ютуб"> </a>
           </div>
-          <a class="contacts_tel" href="tel:78128121212">+7(812)812-12-12</a>
+          <a class="contacts_tel" href="tel:78128121212">+7 (812) 812-12-12</a>
           <a class="footer_navigation_link" href="https://htmlacademy.ru/"><img class="logo_html" src="Images/Footer/html_academy.svg" width="115" height="33"
             alt="Логотип компании htmlacademy"></a>
         </div>
